bk_ida/gccida/g2/clear_limbo_values
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_limbo_values/src/c-decl.c:1453:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_limbo_values/src/c-decl.c:1454:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node **p_chain; // [rsp+8h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_limbo_values/src/c-decl.c:1527:20: error: expected expression
v27 = ( tree_node *)i6[5]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_limbo_values/src/c-decl.c:1527:9: error: use of undeclared identifier 'tree_node'
v27 = ( tree_node *)i6[5]; 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_limbo_values/src/obj/c-decl.o] Error 1
